--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -203,26 +203,24 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  padding: 1rem;
-  max-width: 90vw;
   color: white;
-  -webkit-text-stroke: 0.5px #d29fc7;
+  font-family: 'Tangerine', cursive;
+  padding: 10px;
 }
 .hero-text h1 {
-  font-size: clamp(1.8rem, 5vw, 3rem);
-  margin-bottom: 10px;
+  font-size: 2.5rem; /* Default size for smaller screens */
+  line-height: 1.2;
+  margin-bottom: 20px;
 }
 
 .hero-text h4 {
-  font-size: clamp(1rem, 2.5vw, 1.5rem);
+  font-size: 1.5rem; /* Default size for smaller screens */
   margin-bottom: 10px;
 }
 
 .hero-text h3 {
+  font-size: 2rem; /* Default size for smaller screens */
   margin-bottom: 10px;
-  font-family: 'Tangerine', cursive;
-  font-size: 5rem;
-  
 }
 
 .hero-text p {
@@ -230,20 +228,43 @@ img {
   margin-bottom: 20px;
 }
 
+/* Responsive Design */
+@media screen and (min-width: 768px) {
+  .hero-text h4 {
+    font-size: 2rem; /* Larger size for desktop */
+  }
+
+  .hero-text h3 {
+    font-size: 2.5rem; /* Larger size for desktop */
+  }
+
+  .hero-text h1 {
+    font-size: 3.5rem; /* Larger size for desktop */
+  }
+}
 
 /* ===== CTA BUTTON ===== */
 .cta-button {
-  background-color: white;
-  color: black;
+  font-size: 1rem;
   padding: 10px 20px;
-  font-weight: bold;
-  border-radius: 20px;
+  background-color: #d29fc7;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
   transition: background-color 0.3s ease;
   display: inline-block;
 }
 
 .cta-button:hover {
-  background-color: #d29fc7;
+  background-color: #b28aa6;
+}
+
+/* Responsive Design */
+@media screen and (min-width: 768px) {
+  .cta-button {
+    font-size: 1.2rem;
+    padding: 12px 25px;
+  }
 }
 
 /* ===== FOOTER ===== */
